--- a/ubicacion.html
+++ b/ubicacion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>galeria</title>
+    <title>ubicacion</title>
 </head>
 <body>
     <header style="width:100%; height:2cm; margin-bottom:1cm;background-color: rgb(79, 0, 124);margin-top: 1cm;">     
@@ -25,5 +25,6 @@
             </tr>
         </table>        
     </header>
+
 </body>
 </html>
