--- a/galeria.html
+++ b/galeria.html
@@ -4,26 +4,97 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>galeria</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="general.css">
+    <title>Galeria</title>
 </head>
 <body>
-    <header style="width:100%; height:2cm; margin-bottom:1cm;background-color: rgb(79, 0, 124);margin-top: 1cm;">     
+    <header class="seccion">
+        <h1 align="center"><b>tienda de informatica</b></h1>
+        <nav class="menu">
         <table>
-            <tr width="100%">
-            <td>
-                <li align="center"><a style="color:white;margin: 1cm;" href="galeria.html">galeria</a></li>
-            </td>
-            <td>
-                <li align="center"> <a style="color:white;margin: 1cm;" href="ubicacion.html">ubicacion</a> </li>
-            </td>
-            <td >
-                <li align="center"><a style="color:white;margin: 1cm;" href="inicio.html">inicio</a></li>
-            </td>
-            <td>
-                <li align="center"><a style="color:white;margin: 1cm;" href="contacto.html">contacto</a></li>
-            </td>
+            <tr>
+                <td>
+                    <li><a href="inicio.html" class="opcion_menu">inicio</a></li>
+                </td>
+                <td>
+                    <li><a href="contacto.html" class="opcion_menu">contacto</a></li>
+                </td>
+                <td>
+                    <li><a href="galeria.html" class="opcion_menu">galeria</a></li>
+                </td>
+                <td>
+                    <li><a href="ubicacion.html" class="opcion_menu">ubicacion</a></li>
+                </td>
             </tr>
-        </table>        
-    </header>
+        </table>
+        </nav>
+    </header>  
+    <section class="seccion container row">
+
+        <div class= "col-lg-2 col-md-3 col-sm-4 col-6 imagen" >
+            <img src="images.jfif" align="center" width="50%" >
+            <p width="50%">descripcion descripcion descripcion descripcion 
+                descripcion descripcion descripcion descripcion descripcion descripcion </p>
+        </div>
+ 
+        <div class= "col-lg-2 col-md-3 col-sm-4 col-6 imagen" >
+            <img src="images.jfif" align="center" width="50%" >
+            <p width="50%">descripcion descripcion descripcion descripcion 
+                descripcion descripcion descripcion descripcion descripcion descripcion </p>
+        </div>
+ 
+        <div class= "col-lg-2 col-md-3 col-sm-4 col-6 imagen" >
+            <img src="images.jfif" align="center" width="50%" >
+            <p width="50%">descripcion descripcion descripcion descripcion 
+                descripcion descripcion descripcion descripcion descripcion descripcion </p>
+        </div>
+ 
+        <div class= "col-lg-2 col-md-3 col-sm-4 col-6 imagen" >
+            <img src="images.jfif" align="center" width="50%" >
+            <p width="50%">descripcion descripcion descripcion descripcion 
+                descripcion descripcion descripcion descripcion descripcion descripcion </p>
+        </div>
+ 
+        <div class= "col-lg-2 col-md-3 col-sm-4 col-6 imagen" >
+            <img src="images.jfif" align="center" width="50%" >
+            <p width="50%">descripcion descripcion descripcion descripcion 
+                descripcion descripcion descripcion descripcion descripcion descripcion </p>
+        </div>
+ 
+        <div class= "col-lg-2 col-md-3 col-sm-4 col-6 imagen" >
+            <img src="images.jfif" align="center" width="50%" >
+            <p width="50%">descripcion descripcion descripcion descripcion 
+                descripcion descripcion descripcion descripcion descripcion descripcion </p>
+        </div>
+ 
+    </section>
+    <footer >
+        <table class="pie" width="100%">
+            <tr>
+                <td width="33%" align="center">
+                    relleno <br>
+                    relleno <br>
+                    relleno <br>
+                    relleno <br>
+                    relleno <br>
+                </td>
+                <td width="33%" align="center">
+                    relleno <br>
+                    relleno <br>
+                    relleno <br>
+                    relleno <br>
+                    relleno <br>
+                </td>
+                <td width="33%" align="center">
+                    relleno <br>
+                    relleno <br>
+                    relleno <br>
+                    relleno <br>
+                    relleno <br>
+                </td>
+            </tr>
+        </table>
+    </footer>
 </body>
 </html>
