--- a/inicio.html
+++ b/inicio.html
@@ -5,26 +5,73 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>inicio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="general.css">
+    <title>Inicio</title>
 </head>
+
 <body>
-    <header style="width:100%; height:2cm; margin-bottom:1cm;background-color: rgb(79, 0, 124);margin-top: 1cm;">     
-        <table>
-            <tr width="100%">
+<header class="seccion">
+    <h1 align="center"><b>tienda de informatica</b></h1>
+    <nav class="menu">
+    <table>
+        <tr>
             <td>
-                <li align="center"><a style="color:white;margin: 1cm;" href="galeria.html">galeria</a></li>
-            </td>
-            <td>
-                <li align="center"> <a style="color:white;margin: 1cm;" href="ubicacion.html">ubicacion</a> </li>
-            </td>
-            <td >
-                <li align="center"><a style="color:white;margin: 1cm;" href="inicio.html">inicio</a></li>
+                <li><a href="inicio.html" class="opcion_menu">inicio</a></li>
             </td>
             <td>
-                <li align="center"><a style="color:white;margin: 1cm;" href="contacto.html">contacto</a></li>
+                <li><a href="contacto.html" class="opcion_menu">contacto</a></li>
             </td>
+            <td>
+                <li><a href="galeria.html" class="opcion_menu">galeria</a></li>
+            </td>
+            <td>
+                <li><a href="ubicacion.html" class="opcion_menu">ubicacion</a></li>
+            </td>
+        </tr>
+    </table>
+    </nav>
+</header>     
+        <p class="seccion">
+            <h1>sobre nosotros</h1>
+            Llevamos más de 17 años a tu lado, construyendo y adaptándonos a lo que necesitas a medida que hemos ido avanzando.
+            No obstante, no es tanto todo lo que hemos hecho sino nuestra manera de hacerlo. Por ello, queremos que tengas
+             claro que puedes esperar de nosotros y en qué centramos nuestros esfuerzos 
+            día a día. Para que sepas que puedes esperar de PcComponentes si decides formar parte de esta familia.
+        </p>
+        <iframe width="auto" height="189" src="https://www.youtube.com/embed/cIx1NCvb5TU" title="Barrel Roll 10 hours" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p class="seccion">
+            <h1>historia</h1>
+            El mundo está lleno de historias. Esta es la nuestra.
+            Un repaso a nuestros momentos más importantes desde que en 2005 dos revolucionarios decidieran apostar
+            por facilitar la compra de productos informáticos y tecnológicos.
+        </p>
+    <footer >
+        <table class="pie" width="100%">
+            <tr>
+                <td width="33%" align="center">
+                    relleno <br>
+                    relleno <br>
+                    relleno <br>
+                    relleno <br>
+                    relleno <br>
+                </td>
+                <td width="33%" align="center">
+                    relleno <br>
+                    relleno <br>
+                    relleno <br>
+                    relleno <br>
+                    relleno <br>
+                </td>
+                <td width="33%" align="center">
+                    relleno <br>
+                    relleno <br>
+                    relleno <br>
+                    relleno <br>
+                    relleno <br>
+                </td>
             </tr>
-        </table>        
-    </header>
-    
+        </table>
+    </footer>
 </body>
 </html>
