--- a/ubicacion.html
+++ b/ubicacion.html
@@ -31,10 +31,12 @@
         </table>
         </nav>
     </header>  
-    <H1>
+    <H1 align "center">
         ubicacion
     </H1>
-    <footer >
+    <iframe align="center" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12714.02211870818!2d-3.6319141!3d37.18822045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd71fc4f1fa3fc0d%3A0x3204c91c52ec0184!2sSala%20El%20Tren!5e0!3m2!1ses!2ses!4v1669482059471!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <!-- revisar el footer--!>
+    <footer class= "container row self-align-end">
         <table class="pie" width="100%">
             <tr>
                 <td width="33%" align="center">
